# GraphMana

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
benchmarks/: bench_1kgp_export.py  bench_1kgp_lifecycle.py  bench_export.py  bench_ingest.py  bench_integration_1kgp.py  bench_operations.py  bench_parallel.py  bench_v11_called_packed.py  compare.py  conftest.py  generate_fixtures.py  measurement.py  run_all.py
conda_recipe/: build.sh  meta.yaml
docs/: INSTALL.md  ai-integration.md  api-reference.md  cluster.md  graphpop-compat.md  gvcf-workflow.md  schema.md  tutorial.md
graphmana-cli/: MANIFEST.in  pyproject.toml
graphmana-cli/src/graphmana/: __init__.py  cli.py  config.py  config_file.py
graphmana-cli/src/graphmana/annotation/: manager.py
graphmana-cli/src/graphmana/annotation/parsers/: __init__.py  base.py  bed_region.py  cadd.py  clinvar.py  constraint.py  go_pathway.py
graphmana-cli/src/graphmana/cluster/: __init__.py  filesystem_check.py  neo4j_lifecycle.py
graphmana-cli/src/graphmana/cohort/: manager.py
graphmana-cli/src/graphmana/data/: __init__.py
graphmana-cli/src/graphmana/db/: connection.py  queries.py  schema.py
graphmana-cli/src/graphmana/export/: __init__.py  base.py  beagle_export.py  bed_export.py  bgen_export.py  eigenstrat_export.py  gds_export.py  genepop_export.py  hap_export.py  json_export.py  parallel.py  plink2_export.py  plink_export.py  sfs_dadi_export.py  sfs_fsc_export.py  sfs_utils.py  structure_export.py  treemix_export.py  tsv_export.py  vcf_export.py  zarr_export.py
graphmana-cli/src/graphmana/filtering/: __init__.py  export_filters.py  import_filters.py
graphmana-cli/src/graphmana/ingest/: __init__.py  array_ops.py  chr_reconciler.py  csv_emitter.py  genotype_packer.py  incremental.py  incremental_rebuild.py  loader.py  normalizer.py  parallel.py  pipeline.py  ploidy_detector.py  population_map.py  vcf_parser.py  vep_parser.py
graphmana-cli/src/graphmana/liftover/: __init__.py  chain_parser.py  lifter.py
graphmana-cli/src/graphmana/merge/: __init__.py  merger.py
graphmana-cli/src/graphmana/migration/: __init__.py  manager.py
graphmana-cli/src/graphmana/provenance/: __init__.py  manager.py
graphmana-cli/src/graphmana/qc/: formatters.py  manager.py  ref_check.py
graphmana-cli/src/graphmana/sample/: manager.py
graphmana-cli/src/graphmana/snapshot/: diff.py  manager.py
graphmana-cli/tests/: conftest.py  test_allele_counting.py  test_annotation_manager.py  test_annotation_queries.py  test_array_ops.py  test_audit_fixes.py  test_base_exporter.py  test_beagle_export.py  test_bed_export.py  test_bed_region_parser.py  test_benchmark_fixtures.py  test_benchmark_measurement.py  test_bgen_export.py  test_cadd_parser.py  test_called_packed_v11.py  test_chr_reconciler.py  test_cli_annotate.py  test_cli_cohort.py  test_cli_diff.py  test_cli_export.py  test_cli_ingest.py  test_cli_parallel.py  test_cli_qc.py  test_cli_sample.py  test_cli_snapshot.py  test_cli_validate.py  test_cli_version.py  test_clinvar_parser.py  test_cluster.py  test_cohort_manager.py  test_connection.py  test_constraint_parser.py  test_csv_emitter.py  test_database_param.py  test_eigenstrat_export.py  test_export_annotation_filters.py  test_export_filters.py  test_export_manifest.py  test_gds_export.py  test_genepop_export.py  (+47 more)
graphmana-cli/tests/fixtures/: cadd_sample.tsv  gnomad_constraint_sample.tsv  go_sample.gaf  pathway_sample.tsv
graphmana-mcp/: pyproject.toml
graphmana-mcp/src/graphmana_mcp/: __init__.py  server.py
graphmana-mcp/tests/: test_server.py
graphmana-mcp/tooluniverse/: graphmana_tool.py  graphmana_tools.json
graphmana-procedures/: pom.xml
graphmana-py/: pyproject.toml
graphmana-py/src/graphmana_py/: __init__.py  _queries.py  _unpack.py  client.py
graphmana-py/tests/: test_client.py  test_client_expanded.py  test_queries.py  test_unpack.py
scripts/: build_and_publish.sh  docker-entrypoint.sh
tasks/: checkpoint-2026-03-18.md  (+2 more)
(+147 files in other folders)
