[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmana-mcp"
version = "0.1.0"
description = "MCP server exposing a GraphMana Neo4j database to AI agents"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "graphmana-py",
    "mcp>=1.0",
]

[project.scripts]
graphmana-mcp = "graphmana_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
